# a000940

./: 1-cbszQOvG9_yb8brPvlFndXQPAgaEkJ4  1Lt72bdH0rBnU6QKE4OOSB5Va9JANzu1H  1QCdrZIKSKjHCgMTe_gspyvLINSlaxUd2  1ROjRiSrMy0B6Hn24HHISpRR3D9GqKRSr  1dvZpNlyZZAM2RGZCQW0pIMJbwrReaLqy  1gejFW9vndq0kEFE7n8F9i9cwr6pPltyM  1jJylc_Z78h-GdkN4eZwx00zj7r0cLlOD  1phJvohBimwz7lqHtGHLSCtimj0KU1_Ap  README.md  a00940-OESIS  com.example.GlancesGnome.yml  etq  glances.widget  install.sh  lemniscate_hamiltonian.py  lemniscate_hamiltonian_app.py
.flatpak-builder/checksums/: x86_64-com.example.GlancesGnome.yml
A000940/: streamlit_app.py
A000940-SND/: A000940.py
GLANCES/: Makefile  README.md  files.map  pyproject.toml
GLANCES/flatpak/: com.example.GlancesGnome.yml
GLANCES/src/data/: com.example.GlancesGnome.desktop  com.example.GlancesGnome.metainfo.xml
GLANCES/src/glances_gnome/: __main__.py  app.py  app_tuy.py
GLANCES/src/glances_gnome.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MBROLA/mbrola-interface/: README.md  install_debian.sh  mbrola_interface.py  pyproject.toml
MBROLA/mbrola-interface/.github/: copilot-instructions.md
MBROLA/mbrola-interface/examples/: hello.pho
MBROLA/mbrola-interface/mbrola_interface.egg-info/: SOURCES.txt  entry_points.txt
MOCCHATOOL/: env-setup.sh  install.sh  mochabin_tool.py
MOCCHATOOL/.github/: copilot-instructions.md
PCB000/mikroBUS_docs_v1/: netlist_summary.csv
glances python/: com.example.GlancesGnome.desktop  lemniscate_hamiltonian.py  main.py
(+13 files in other folders)
